{
    "name": "KeyboardCubeTest",
    "maps": [
        {
            "name": "Gameplay",
            "id": "b9f4a674-a8ee-4e23-90ba-ad0366891f7d",
            "actions": [
                {
                    "name": "PaddleLeft",
                    "type": "Button",
                    "id": "ead24d1a-5ff2-488e-bdb3-31e57f69e5f4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "RotateLeft",
                    "type": "Button",
                    "id": "7f1a2d24-94cf-4d70-bead-031225b0fa14",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "PaddleRight",
                    "type": "Button",
                    "id": "99251e5d-82da-4d4a-8eb4-fb2943c6b551",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "RotateRight",
                    "type": "Button",
                    "id": "e3f2c7de-b4e4-4c36-b230-2ebc68ff69cb",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "b49f8a55-f74a-4860-b038-6d31e4556f16",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "PaddleLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a5f734bd-42f1-48e7-b3bf-56d77bc481e3",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "PaddleRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d30826b1-ef5e-4273-b90a-9228ddd59536",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "RotateLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "74a622a8-e011-4eaf-8cd2-38295c30530e",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "RotateRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Keyboard",
            "bindingGroup": "Keyboard",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}